--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -362,7 +362,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v5
         with:
-          conresponse: .
+          context: .
           file: ./Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           platforms: |
