--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ on:
     branches:
       - Alpha
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: '${{ github.workflow }}-${{ github.ref }}'
   cancel-in-progress: true
   
 env:
@@ -178,7 +178,7 @@ jobs:
     - name: Archive production artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.jobs.goos }}-${{ matrix.jobs.output }}
+        name: '${{ matrix.jobs.goos }}-${{ matrix.jobs.output }}'
         path: |
           mihomo*.gz
           mihomo*.deb
@@ -323,25 +323,29 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           version: latest
-
-      - name: Set Docker tags and labels based on trigger
-        id: set-meta
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "tags=${{ github.repository }}:latest,${{ github.repository }}:${{ github.event.inputs.version }}" >> $GITHUB_ENV
-            echo "labels=org.opencontainers.image.version=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-          fi
           
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
-        id: meta
+        id: meta_alpha
+        if: ${{github.ref_name == 'Alpha'}}
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ github.repository }}
-          tags: ${{ env.tags }}
+          images: '${{ env.REGISTRY }}/${{ github.repository }}'
+          tags: ${{ github.repository }}:Alpha
           labels: ${{ env.labels }}
-
+      
+      # Extract metadata (tags, labels) for Docker
+      # https://github.com/docker/metadata-action
+      - name: Extract Docker metadata
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version != '' }}
+        id: meta_release
+        uses: docker/metadata-action@v5
+        with:
+          images: '${{ env.REGISTRY }}/${{ github.repository }}'
+          tags: '${{ github.repository }}:latest,${{ github.repository }}:${{ github.event.inputs.version }}'
+          labels: org.opencontainers.image.version=${{ github.event.inputs.version }}
+          
       - name: Show files
         run: |
           ls .
@@ -356,6 +360,7 @@ jobs:
 
       - name: Build and push Docker image
         id: build-and-push
+        if: ${{ github.ref_name == 'Alpha' }}
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -366,5 +371,21 @@ jobs:
             linux/amd64
             linux/arm64
             linux/arm/v7
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta_alpha.outputs.tags }}
+          labels: ${{ steps.meta_alpha.outputs.labels }}
+          
+      - name: Build and push Docker image
+        id: build-and-push
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version != '' }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          platforms: |
+            linux/386
+            linux/amd64
+            linux/arm64
+            linux/arm/v7
+          tags: ${{ steps.meta_release.outputs.tags }}
+          labels: ${{ steps.meta_release.outputs.labels }}
